small nav menu, layout bug

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,13 @@
-router-outlet {
+div {
     position:absolute;
-    top:100px;
+    top:30px;
     left:10px;
     right:10px;
     bottom: 10px;
     border: 1px solid black;
+}
+a {
+    margin-right: 5px;
+    font-family: Roboto;
+    font-size: small;
 }
