--- a/src/app/components/options-panel/options-panel.component.css
+++ b/src/app/components/options-panel/options-panel.component.css
@@ -4,7 +4,7 @@
 div {
     background-color: var(--accent-lighter-color);
     width:200px;
-    position:absolute;
+    position:relative;
     left: calc(50% - 65px);
     color: var(--primary-color);
     border: 2px solid var(--accent-color);
